--- a/spring-asen/build.gradle
+++ b/spring-asen/build.gradle
@@ -15,6 +15,10 @@ dependencies {
     compile(project(":spring-core"))
     optional(project(":spring-aop"))
     optional(project(":spring-context"))
+//    optional(project(":spring-aspects"))
+//    optional(project(":spring-jdbc"))
     implementation group: 'org.aspectj', name: 'aspectjrt', version: '1.9.6'
     runtimeOnly group: 'org.aspectj', name: 'aspectjweaver', version: '1.9.6'
+//    implementation group: 'mysql', name: 'mysql-connector-java', version: '8.0.16'
+//    implementation group: 'com.alibaba', name: 'druid', version: '1.1.22'
 }
